# witness-machine

./: .gitignore  CITATION.cff  LICENSE  MOLAB_RUNTIME_HOTFIX_SPEC.md  RELEASE_MANIFEST.json  pyproject.toml
artifacts/v12_public/: v12_boundary_evolution.manifest.json  v12_boundary_evolution.npz  v12_real_frame_display.manifest.json  v12_real_frame_display.npz  v12_real_frozen_scorer_display.manifest.json  v12_real_frozen_scorer_display.npz  v12_real_frozen_scorer_evidence.manifest.json  v12_real_frozen_scorer_evidence.npz  v12_temporal_transport_display.manifest.json  v12_temporal_transport_display.npz
configs/: v12_claim_sources.yaml  v12_paper_lineage.yaml
docs/: THIRD_PARTY_NOTICES_V12.md  V12_BUNDLE_README.md
notebooks/: witness_machine_v12.py
notebooks/__marimo__/session/: witness_machine_v12.py.json
scripts/: build_v12_real_frames.py
src/molab_witness_machine/: __init__.py  final_sweep.py  release_candidate.py  score_law.py  v12_control.py  v12_copy.py  v12_geometry.py  v12_gpu.py  v12_policy_compare.py  v12_real_evidence.py  v12_real_frames.py  v12_release.py  v12_stac.py  v12_temporal.py  v12_visuals.py
tests/: test_molab_runtime_hotfix.py
